--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
             <div class="elem">
                 <img src="https://cdn.dribbble.com/uploads/47178/original/mercedes-bazan.png?1689174566&format=webp&resize=320x399&vertical=center" alt="">
             </div>
+            <div class="elem">
+                <img src="https://cdn.dribbble.com/uploads/47178/original/mercedes-bazan.png?1689174566&format=webp&resize=320x399&vertical=center" alt="">
+            </div>
         </div>
         <div class="photo">
+            <div class="elem">
+                <img src="https://cdn.dribbble.com/uploads/47178/original/mercedes-bazan.png?1689174566&format=webp&resize=320x399&vertical=center" alt="">
+            </div>
             <div class="elem">
                 <img src="https://cdn.dribbble.com/uploads/47178/original/mercedes-bazan.png?1689174566&format=webp&resize=320x399&vertical=center" alt="">
             </div>
